# swig-example

./: CMakeLists.txt  README.md  lib.cpp  lib.hpp  lib.i  program.f90
